<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiles</string>
    <string name="url">Site URL</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="lightness">Lightness</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

</resources>